ms-cards implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,17 @@
             "mainClass": "com.mscourse.gateway.GatewayApplication",
             "projectName": "gateway",
             "args": "",
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=38463 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=gateway"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-CardsApplication<cards>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.mscourse.cards.CardsApplication",
+            "projectName": "cards",
+            "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
