credit-evaluator implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,8 @@
             "mainClass": "com.mscourse.clients.ClientsApplication",
             "projectName": "clients",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=43151 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=clients"
         },
         {
             "type": "java",
@@ -45,6 +46,16 @@
             "cwd": "${workspaceFolder}",
             "mainClass": "com.mscourse.cards.CardsApplication",
             "projectName": "cards",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-CreditEvaluatorApplication<credit-evaluator>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.mscourse.creditevaluator.CreditEvaluatorApplication",
+            "projectName": "credit-evaluator",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
