--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,13 +1,6 @@
 # Server Config
 server:
-    port: 0
-
-# Eureka Config
-eureka:
-    client:
-        service-url:
-            defaultZone: http://localhost:8761/eureka/
-            instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    port: ${PORT:0}
 
 # Application Config
 spring:
@@ -16,6 +9,7 @@ spring:
     datasource:
         username: sa
         password:
+        driverClassName: org.h2.Driver
     h2:
         console:
             enabled: true
@@ -24,7 +18,7 @@ spring:
                 web-allow-others: true
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: none
             defer-datasource-initialization: true
             database-platform: org.hibernate.dialect.H2Dialect
             properties:
@@ -35,9 +29,20 @@ spring:
         pathmatch:
             matching-strategy: ant-path-matcher
 
+# Eureka Config
+eureka:
+    client:
+        service-url:
+            defaultZone: http://localhost:8761/eureka/
+            instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 # Management Config
 management:
     endpoints:
         web:
             exposure:
                 include: '*'
+
+mq:
+    queue:
+        cards-issuance: cards-issuance
