--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -28,6 +28,11 @@ spring:
     mvc:
         pathmatch:
             matching-strategy: ant-path-matcher
+    rabbitmq:
+        host: localhost
+        port: 5672
+        username: user
+        password: docker
 
 # Eureka Config
 eureka:
@@ -44,5 +49,5 @@ management:
                 include: '*'
 
 mq:
-    queue:
+    queues:
         cards-issuance: cards-issuance
