--- a/credit-evaluator/src/main/resources/application.yml
+++ b/credit-evaluator/src/main/resources/application.yml
@@ -13,6 +13,11 @@ eureka:
 spring:
     application:
         name: ms-credit-evaluator
+    rabbitmq:
+        host: localhost
+        port: 5672
+        username: user
+        password: docker
 
 # Management Config
 management:
@@ -20,3 +25,7 @@ management:
         web:
             exposure:
                 include: '*'
+
+mq:
+    queues:
+        cards-issuance: cards-issuance
